# TFS_Team_Room_Client

./: .gitignore  LICENSE  README.md  pyproject.toml
TFS_ChatClient/cli/: main.py
TFS_ChatClient/core/: app_manager.py  get_rooms_thread.py
TFS_ChatClient/gui/: chat_window.py  login_screen.py
src/back_end/: tfs_rest.py
src/cli/: main.py
src/core/: app_manager.py  config_reader.py  core.py  get_rooms_thread.py  login_thread.py  room_data_thread.py  send_messages_thread.py
src/gui/: chat_window.kv  chat_window.py  login_screen.kv  login_screen.py  main.py
temp/core/: room.py
tfs_chatclient/: gui.py  tfs_config.json.example
tfs_chatclient/cli/: main.py
tfs_chatclient/core/: config_reader.py  core.py  get_rooms_thread.py  login_thread.py  room_data_thread.py  send_messages_thread.py
tfs_chatclient/gui/: chat_window.kv  chat_window.py  login_screen.py  main.py
