[tool.poetry]
name = "tfs-team-room-client"
version = "0.1.0"
description = ""
authors = ["Nick Hartung <nickhartung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
requests_ntlm = "^1.1.0"
curses-menu = "^0.5.0"
windows-curses = "^2.1.0"
kivy = "^1.11.1"
"kivy_deps.sdl2" = "0.1.*"
"kivy_deps.glew" = "0.1.*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
