[tool.poetry]
name = "TFS_ChatClient"
version = "0.1.0"
description = "A front-end chat client for the TFS 2015 back-end."
authors = ["Nick Hartung <nickhartung@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nhartung/TFS_Team_Room_Client"
keywords = ["tfs", "chat", "client"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
requests_ntlm = "^1.1.0"
curses-menu = "^0.5.0"
windows-curses = "^2.1.0"
kivy = "^1.11.1"
"kivy_deps.sdl2" = "0.1.*"
"kivy_deps.glew" = "0.1.*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
gui = "src.gui.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
